# SpeechCore

./: CMakeLists.txt  readme.md
include/: SpeechCore.h
lib/arm64/: nvdaControllerClient.lib  nvdaControllerClient_static.lib
lib/x64/: nvdaControllerClient.lib  nvdaControllerClient_static.lib
lib/x86/: nvdaControllerClient.lib  nvdaControllerClient_static.lib
src/: SpeechCore.cpp
src/SCDrivers/: SpeechDispatcher.cpp  jaws.h  nvda.cpp  nvda.h  sapi5driver.cpp
